RESOLVED FIXED167912
ExtendedColor leaks seen on leaks bot
https://bugs.webkit.org/show_bug.cgi?id=167912
Summary ExtendedColor leaks seen on leaks bot
Joseph Pecoraro
Reported 2017-02-06 16:38:51 PST
ExtendedColor leaks seen on leaks bot Test: WebCore::Color c1(1.0, 0.5, 0.25, 1.0, WebCore::ColorSpaceDisplayP3); WebCore::Color c2(0.1, 0.5, 0.25, 1.0, WebCore::ColorSpaceDisplayP3); c1 = WTFMove(c2); Leak: Leak: 0x7fdda21060f0 size=32 zone: WebKit Using System Malloc_0x10f14c000 0x00000001 0x60000000 0x3f800000 0x3f000000 .......`...?...? 0x3e800000 0x3f800000 0x00000003 0x706d6f63 ...>...?....comp Call stack: [thread 0x7fffc18523c0]: | 0x1 | start ... | WebKit::testLeak() | WebCore::Color::Color(float, float, float, float, WebCore::ColorSpace) Color.cpp:308 | WebCore::Color::Color(float, float, float, float, WebCore::ColorSpace) Color.cpp:305 | WebCore::ExtendedColor::create(float, float, float, float, WebCore::ColorSpace) ExtendedColor.cpp:38 | WTF::RefCounted<WebCore::ExtendedColor>::operator new(unsigned long) RefCounted.h:140 | WTF::fastMalloc(unsigned long) FastMalloc.cpp:256 | bmalloc::api::malloc(unsigned long) bmalloc.h:43 | bmalloc::Cache::allocate(unsigned long) Cache.h:80 | bmalloc::Allocator::allocate(unsigned long) Allocator.h:89 | bmalloc::Allocator::allocateSlowCase(unsigned long) Allocator.cpp:187 | bmalloc::DebugHeap::malloc(unsigned long) DebugHeap.cpp:44
Attachments
[PATCH] Proposed Fix (1.25 KB, patch)
2017-02-06 16:43 PST, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2017-02-06 16:43:31 PST
Created attachment 300767 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 2 2017-02-06 18:41:31 PST
Comment on attachment 300767 [details] [PATCH] Proposed Fix Clearing flags on attachment: 300767 Committed r211768: <http://trac.webkit.org/changeset/211768>
WebKit Commit Bot
Comment 3 2017-02-06 18:41:35 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.