ExtendedColor leaks seen on leaks bot https://bugs.webkit.org/show_bug.cgi?id=167912

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-02-06
Reviewed by Alexey Proskuryakov.

* platform/graphics/Color.cpp:
(WebCore::Color::operator=):
Before overwriting m_colorData, we must deref the extended color inside it.

Canonical link: https://commits.webkit.org/184942@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211768 268f45cc-cd09-0410-ab3c-d52691b4dbfc